 * Fix: When i18n is not enabled, avoid making a Locale query on every page view (Dan Braghis)
 * Fix: Fix initialisation of commenting widgets within StreamField (Thibaud Colas)
 * Fix: Fix various regressions in the commenting UI (Thibaud Colas)
 * Fix: Prevent TableBlock from becoming uneditable after save (Sage Abdullah)
 * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
 * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp, Thibaud Colas)
 * Docs: Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
 * Docs: Add helpful troubleshooting links and refine wording for getting started with development (Loveth Omokaro)
 * Docs: Ensure search autocomplete overlay on mobile does not overflow the viewport (Ayman Makroo)
 * Docs: Improve documentation for InlinePanel (Vallabh Tiwari)
 * Docs: Add contributor guidelines for building Stimulus Controllers (Thibaud Colas, Loveth Omokaro, LB (Ben) Johnston)
 * Docs: Fix typo in "Extending Draftail" documentation (Hans Kelson)
 * Docs: Clarify `ClusterableModel` requirements for using relations with `RevisionMixin`-enabled models (Sage Abdullah)
 * Docs: Add guide to making your first contribution (LB (Ben) Johnston)
 * Maintenance: Removed features deprecated in Wagtail 3.0 and 4.0 (Matt Westcott)
 * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
 * Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
 * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
 * Maintenance: Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
 * Maintenance: Provisional Django 5.0 compatibility fixes (Sage Abdullah)
 * Maintenance: Add unit tests for `CollapseAll` and `MinimapItem` components (Albina Starykova)
 * Maintenance: Code quality fixes (GLEF1X)